<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mowbot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nguyenhatrung411@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2_ros</depend>
  <depend>swri_transform_util</depend>
  
  <!-- <depend>mapviz</depend> -->
  <!-- <depend>mapviz_plugins</depend> -->
  <!-- <depend>tile_map</depend> -->
  <!-- <depend>multires_image</depend> -->

  <depend>robot_localization</depend>

  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>twist_mux</depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
